--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <link rel="shortcut icon" href="https://mj-ahmad.github.io/qf/assets/logo.png" />
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
 
   <!-- Preload important image assets (use web paths not local disk paths) -->
   <link rel="preload" as="image" href="https://mj-ahmad.github.io/qf/images/earth-daymap.png" imagesrcset="/images/earth-daymap.png 1x" />
